# picorust

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
scripts/: flash.sh  gdb-listen.sh
src/: main.rs
